--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,15 @@
   "author": "sankar",
   "license": "ISC",
   "dependencies": {
-    "@clerk/express": "^1.5.0",
+    "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
-    "multer": "^2.0.0",
-    "svix": "^1.66.0"
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
